Updated example notebooks. Fixed notebook naming and link in README.md.
Signed-off-by: niksyromyatnikov <nik@serafima.ai>

--- a/examples/notebooks/data_processing.ipynb
+++ b/examples/notebooks/data_processing.ipynb
@@ -17,22 +17,7 @@
    },
    "outputs": [],
    "source": [
-    "!git clone https://github.com/niksyromyatnikov/OHLCFormer ohlcformer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "!pip install pytorch-lightning==1.5.10\n",
-    "!pip install transformers==4.16.2\n",
-    "!pip install dotmap"
+    "!pip install ohlcformer"
    ]
   },
   {
@@ -50,6 +35,19 @@
     "from pathlib import Path\n",
     "from ohlcformer.data import InputFeatures, convert_to_tensor_dataset\n",
     "from ohlcformer.data.utils import convert_stock_data, read_stocks_dir, split_time_series, convert_series_to_relative"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/niksyromyatnikov/OHLCFormer ohlcformer"
    ]
   },
   {
