--- a/examples/notebooks/train_model.ipynb
+++ b/examples/notebooks/train_model.ipynb
@@ -14,6 +14,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install ohlcformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "from ohlcformer import run_training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -34,9 +57,31 @@
    },
    "outputs": [],
    "source": [
-    "!pip install pytorch-lightning==1.5.10\n",
-    "!pip install transformers==4.16.2\n",
-    "!pip install dotmap"
+    "path = Path('.').absolute()\n",
+    "data_path = path / 'ohlcformer' / 'examples' / 'data'\n",
+    "model_configs_path = path / 'ohlcformer' / 'examples' / 'model_configs' / 'FNetForFM.json'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "Note: the following steps require data preprocessing ([more](https://github.com/niksyromyatnikov/OHLCFormer/blob/master/examples/notebooks/data-processing.ipynb))."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "<h2>Training</h2>"
    ]
   },
   {
@@ -49,50 +94,6 @@
    },
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "from ohlcformer import run_training"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = Path('.').absolute()\n",
-    "data_path = path / 'ohlcformer' / 'examples' / 'data'\n",
-    "model_configs_path = path / 'ohlcformer' / 'examples' / 'model_configs' / 'FNetForFM.json'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Note: the following steps require data preprocessing ([more](https://github.com/niksyromyatnikov/OHLCFormer/blob/master/examples/notebooks/data-processing.ipynb))."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "<h2>Training</h2>"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
     "datasets = {\n",
     "    'train': data_path / 'train.pt',\n",
     "    'train_with_sep_test': {\n",
@@ -102,43 +103,40 @@
     "        }\n",
     "    }\n",
     "}"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "run_training(configs_path=model_configs_path, datasets=datasets, evaluate=True, verbose=False)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "<h2>Training with advanced settings</h2>"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "<h2>Training with advanced settings</h2>"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "datasets = {\n",
@@ -165,27 +163,20 @@
     "        }\n",
     "    },\n",
     "}"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [
-    "run_training(configs_path=model_configs_path, datasets=datasets, evaluate=True, verbose=False)"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "run_training(configs_path=model_configs_path, datasets=datasets, evaluate=True, verbose=False)"
+   ]
   }
  ],
  "metadata": {
