--- a/examples/notebooks/models_evaluation.ipynb
+++ b/examples/notebooks/models_evaluation.ipynb
@@ -36,7 +36,8 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "from ohlcformer import run_tests, compare_models, load_model_configs"
+    "from ohlcformer.utils import load_model_configs\n",
+    "from ohlcformer.evaluation import run_tests, compare_models"
    ]
   },
   {
