--- a/examples/notebooks/train_model.ipynb
+++ b/examples/notebooks/train_model.ipynb
@@ -14,7 +14,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "!pip install ohlcformer"
@@ -31,7 +35,7 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "from ohlcformer import run_training"
+    "from ohlcformer.training import run_training"
    ]
   },
   {
